@@ -27,51 +27,35 @@ def save_tga(image, w, h, name = "#{Time.now.strftime('%Y%m%d-%H%M%S')}.tga")
   end
 end
 
-$img_w = 8192
-$img_h = 8192
+$img_w = 4096
+$img_h = 4096
 
 if $0 == __FILE__
   clu_platform = CLUPlatform.new
   clu_device = CLUDevice.new(clu_platform[0], CL_DEVICE_TYPE_DEFAULT)
   clu_ctx = CLUContext.newContext(nil, [clu_device[0]])
 
-  clu_prog = CLUProgram.newProgramWithSource(clu_ctx, [File.read("mandelbrot_prof.cl")])
+  clu_prog = CLUProgram.newProgramWithSource(clu_ctx, [File.read("mandelbrot_per4.cl")])
   clu_prog.buildProgram([clu_device[0]])
-  clu_kern = CLUKernel.newKernel(clu_prog, "mandelbrot_div")
+  clu_kern = CLUKernel.newKernel(clu_prog, "mandelbrot_per4_loop")
+# clu_kern = CLUKernel.newKernel(clu_prog, "mandelbrot_per4_vec")
 
-  clu_cq = CLUCommandQueue.newCommandQueue(clu_ctx, clu_device[0], CL_QUEUE_PROFILING_ENABLE) # Enable profiling
+  clu_cq = CLUCommandQueue.newCommandQueue(clu_ctx, clu_device[0])
 
   step = 4
   host_img = Fiddle::Pointer.malloc(step * $img_w * $img_h)
   device_img = CLUMemory.newBuffer(clu_ctx, CL_MEM_WRITE_ONLY, host_img.size)
 
-  perf_event = []
-  [32, 16, 8, 4, 2, 1].each do |workrect_size|
-    10.times do |i|
-      perf_event.clear
+  workrect_size = 4
+  clu_kern.setKernelArg(0, Fiddle::TYPE_VOIDP, [device_img.handle.to_i])
 
-      clu_kern.setKernelArg(0, Fiddle::TYPE_VOIDP, [device_img.handle.to_i])
-      clu_kern.setKernelArg(1, Fiddle::TYPE_INT, [step])
-      clu_kern.setKernelArg(2, Fiddle::TYPE_INT, [workrect_size])
-
-      global_work_offset = nil
-      global_work_size = [$img_w.to_i/workrect_size, $img_h.to_i/workrect_size]
-      local_work_size = nil
-      clu_cq.enqueueNDRangeKernel(clu_kern, 2, global_work_offset, global_work_size, local_work_size, event: perf_event)
-
-      clu_event = CLUEvent.new(perf_event[0])
-      clu_event.wait
-
-      perf_start = clu_event.getEventProfilingInfo(CL_PROFILING_COMMAND_START)
-      perf_end   = clu_event.getEventProfilingInfo(CL_PROFILING_COMMAND_END)
-
-      ms = (perf_end - perf_start) * 1.0e-6
-      puts "Work Rectangle Size=#{workrect_size}\t: #{ms}msec."
-      # puts "#{workrect_size}\t#{ms}"
-    end
-  end
+  global_work_offset = nil
+  global_work_size = [$img_w/workrect_size, $img_h]
+  local_work_size = nil
+  clu_cq.enqueueNDRangeKernel(clu_kern, 2, global_work_offset, global_work_size, local_work_size)
 
   clu_cq.enqueueReadBuffer(device_img, CL_TRUE, 0, host_img.size, host_img)
+
   save_tga(host_img, $img_w, $img_h)
 
   device_img.release
